# audiotextpro

./: .env.example  Makefile  README.md  TEMPLATE.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
audiotextpro/: __init__.py  __main__.py  api.py  file.py  transcript_processor.py  utils.py
