# Copyright (C) 2023 Sebastien Rousseau.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
# implied.
#
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = audiotextpro
version = 0.0.1
description = A Python module for interacting with the AssemblyAI API for audio transcription.
keywords = assemblyai, transcription, audio, API
author = Sebastien Rousseau
author_email = sebastian.rousseau@gmail.com
url = https://github.com/sebastienrousseau/audiotextpro
license = Apache License 2.0
license_files =
    LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Multimedia :: Sound/Audio
    Topic :: Software Development :: Libraries :: Python Modules

project_urls =
    Documentation = https://audiotextpro.com/documentation
    Source = https://github.com/sebastienrousseau/audiotextpro

[options]
packages =
    audiotextpro
zip_safe = False
include_package_data = True
python_requires = >=3.9
install_requires =
    requests>=2.26.0

[aliases]
test = pytest

[tool:pytest]
testpaths = tests

[wheel]
universal = 1
